--- a/oneway/twoway_balanced.ipynb
+++ b/oneway/twoway_balanced.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c1a23f11",
+   "id": "1a86ad48",
    "metadata": {},
    "source": [
     "# Balanced two-way ANOVA\n",
     "\n",
     "This page follows on from the [one-way ANOVA notebook](./oneway_diets.ipynb).\n",
     "\n",
-    "Please make sure you follow the one-way ANOVA notebook before you read this notebook, because we are going to re-use a not of notation and machinery from that notebook.\n",
+    "Please make sure you follow the one-way ANOVA notebook before you read this notebook, because we are going to re-use a lot of notation and machinery from that notebook.\n",
     "\n",
     "In the one-way notebook, we considered the situation where we had three groups, and, for each group, we have a certain number of values.  In our particular case, we had measures of the amount of weight lost by groups of people following three different diets.\n",
     "\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7651cbe4",
+   "id": "cfc2dada",
    "metadata": {},
    "source": [
     "## Back to the example\n"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "218869b7",
+   "id": "d8c20cae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d88a2f4",
+   "id": "99ab7be5",
    "metadata": {},
    "source": [
     "We return to our dataset giving amount of weight lost (in kilograms) after 10 weeks of one of three possible diets.\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a429569",
+   "id": "b5f0702e",
    "metadata": {},
    "source": [
     "See: [the dataset page](https://github.com/odsti/datasets/tree/master/sheffield_diet) for more detail."
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1c58aa2c",
+   "id": "5538f0ae",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04d97c4",
+   "id": "141664b4",
    "metadata": {},
    "source": [
     "Pandas `groupby` can classify each row using *both* the `gender` label (level) and the `diet` label (level), like this:"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "03c35762",
+   "id": "f91eb794",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b9b74b0",
+   "id": "fb6b59c9",
    "metadata": {},
    "source": [
     "## Cheating by balancing the groups\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bff412f3",
+   "id": "4966f056",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "09a86a2e",
+   "id": "6b8f97ab",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42251224",
+   "id": "cb5df65a",
    "metadata": {},
    "source": [
     "Notice that we now have the same number of individuals in each of the six groups:"
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e5cc71dc",
+   "id": "d4dc7961",
    "metadata": {},
    "outputs": [
     {
@@ -442,18 +442,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1cb00d",
+   "id": "2d6f7f6a",
    "metadata": {},
    "source": [
     "## Two-way ANOVA\n",
     "\n",
-    "Next we dive straight in to the standard two-way ANOVA, using Statsmodels."
+    "Next we dive straight into the standard two-way ANOVA, using Statsmodels."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "83969bfa",
+   "id": "7d491e57",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63daef85",
+   "id": "f87fdeb1",
    "metadata": {},
    "source": [
     "Please keep referring back to this table.  In the next few sections we will replicate the sum of square values using our familiar one-way machinery.\n"
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d567a8",
+   "id": "86ece44a",
    "metadata": {},
    "source": [
     "## Replicating the two-way ANOVA calculations\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "168a1f0e",
+   "id": "73666420",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb6fb97",
+   "id": "0ad3ea3e",
    "metadata": {},
    "source": [
     "The overall mean of the ZM column is (near as dammit) zero."
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bd2abcef",
+   "id": "124010f8",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f27ed6a1",
+   "id": "f22d1486",
    "metadata": {},
    "source": [
     "We next use the plot function from the one-way notebook:"
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "63f002f9",
+   "id": "3a0b0353",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "704ccd6d",
+   "id": "ec0a2cbf",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63133a85",
+   "id": "65cc398a",
    "metadata": {},
    "source": [
     "Now let us think about the SNSQGMD metric for the `gender` factor.  Remember,\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73264be7",
+   "id": "ae358fe1",
    "metadata": {},
    "source": [
     "As a reminder of how the metric works, let's do the calculation long-hand:"
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17a8b1ec",
+   "id": "2384e783",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd8079fe",
+   "id": "a07bc9fd",
    "metadata": {},
    "source": [
     "We will do this several times, so we use the SNSQGMD function from the one-way notebook to do the same calculation:"
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7b2ece0c",
+   "id": "52d4ac95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8f2a283b",
+   "id": "4dc2dda4",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b564818",
+   "id": "c7cf5120",
    "metadata": {},
    "source": [
     "This is exactly the `sum_sq` value for `gender` in the ANOVA table above.\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4d4a21c2",
+   "id": "72c09fa0",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce0386e",
+   "id": "e1e78afe",
    "metadata": {},
    "source": [
     "This is exactly the `sum_sq` value for `diet` in the ANOVA table above."
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8903abac",
+   "id": "4b62047f",
    "metadata": {},
    "source": [
     "## Allowing for the other effects"
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039cdc6f",
+   "id": "7dd59eef",
    "metadata": {},
    "source": [
     "But wait - should we not allow for the effects (means) of `diet` when assessing the effects (means) of `gender`?  And vice-versa?  And if you've been [reading around the topic](https://www.ars.usda.gov/ARSUserFiles/60540520/Two-wayANOVAspreadsheet.pdf), you might know this is exactly what the *type II sum of squares* calculation is meant to do.  We used type II sum of squares in the ANOVA calculation above, with the `typ=2` keyword argument. Let's do that, and see what we get."
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a56359e",
+   "id": "eec74ca9",
    "metadata": {},
    "source": [
     "Our job now is to *remove* the effect of `diet` before assessing the effect of gender.  We do this by getting the means for each of the three diet levels `A`, `B`, and `C`, and subtracting these means from the values corresponding to diets `A`, `B` and `C`."
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b10be386",
+   "id": "44176fdd",
    "metadata": {},
    "source": [
     "Here are the group means for `diet`:"
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "530fb14c",
+   "id": "b8c16b73",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c84b5714",
+   "id": "50d3de39",
    "metadata": {},
    "source": [
     "First we make a new series that replaces the individual values for `wlost_zm` with their corresponding group means.  We can use the Pandas `transform` method of the `groupby` object to do this for us:"
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "93d464c9",
+   "id": "f138671c",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05ea08a",
+   "id": "3098c9fe",
    "metadata": {},
    "source": [
     "Next we subtract these diet group means from the `wlost_zm` column, to give the values *left over*  (residual values) after *adjusting for* the `diet` means."
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "804d4dbf",
+   "id": "7f2af5c4",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3839373d",
+   "id": "bdb38190",
    "metadata": {},
    "source": [
     "We will do this subtracting mean operation a few times, so we put it into a function:"
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ea7e5908",
+   "id": "f1421fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "246e7030",
+   "id": "b22d0646",
    "metadata": {},
    "source": [
     "Show we get the same result from the function as from the by-hand calculation above:"
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6e10effb",
+   "id": "44257ebb",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c426cbe6",
+   "id": "2db98308",
    "metadata": {},
    "source": [
     "Now we have this diet-adjusted column, we can put it into the data frame, and calculate the SNSQGMD metric."
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "61d9aa3b",
+   "id": "934da391",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0641beb",
+   "id": "10697fb5",
    "metadata": {},
    "source": [
     "How strange - this is *extremely* close to the value we got before adjusting for diet. So close, in fact that the difference looks like the kind of error we typically get from floating point calculations:"
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8cd61884",
+   "id": "13cb6d0c",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "069b0bc8",
+   "id": "7b4ad19d",
    "metadata": {},
    "source": [
     "As you might imagine, this implies that the means were all but exactly the same before and after adjustment:"
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c329eacd",
+   "id": "0e6bf4eb",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ec2857d2",
+   "id": "06a93544",
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471c4d74",
+   "id": "5f1f87fd",
    "metadata": {},
    "source": [
     "Yes, that's right - it's a result of the cheating we did further up, in adjusting the groups to each have the same numbers.  In that situation, where the analysis is *balanced*, adjusting each factor for the other has no effect.   Things get more complicated in the much more typical situation, where the group numbers are not the same."
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7108f510",
+   "id": "324c204f",
    "metadata": {},
    "source": [
     "However, in the next step, we will be seeing what is left for the groups to explain, after adjusting for the means of `gender` and `diet`.  Here we are asking - how different are the *remaining* group means, *after* taking into account the overall differences due to `gender` and to `diet`?\n",
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "df0fe50b",
+   "id": "45e2089f",
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172be60b",
+   "id": "94a0d99c",
    "metadata": {},
    "source": [
     "Now we need to look at the means across the *six* groups, formed by the two levels of `gender` crossed by the three levels of `diet`.  We can form a label for these six groups by combining the labels from the two factors:"
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0c212ea1",
+   "id": "4ae5c4de",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56fbfb8",
+   "id": "fa28395d",
    "metadata": {},
    "source": [
     "Plot the data and means of the adjusted data for each of these six groups:"
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "969d0093",
+   "id": "4950db9a",
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a11da9df",
+   "id": "d6687e89",
    "metadata": {},
    "source": [
     "If the effects of `diet` and `gender` explain most of the differences between weight values, then we would expect these remaining mean differences to be small.  If there are other effects, such as bigger changes in some sub-groups than others, then these remaining effects will be large.  These remaining effects are called *interaction* effects.  The are interactions because, when present, they imply that the effects of diet or gender are bigger in some sub-groups than others.  In that situation, we talk of the effects of diet and gender *interacting*."
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea6d9a3",
+   "id": "a980ae85",
    "metadata": {},
    "source": [
     "At this point, it may be obvious what we do to assess the overall size of these remaining mean differences. That's right, we calculate the SNSQGMD metric on them:"
@@ -1457,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2ef4edec",
+   "id": "b39671c9",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fca8eece",
+   "id": "b804d474",
    "metadata": {},
    "source": [
     "Notice that this is exactly the same as the `gender:diet` `sum_sq` value in the ANOVA table:"
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "77418b97",
+   "id": "3a10ae63",
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eba2f7ce",
+   "id": "4e18d154",
    "metadata": {},
    "source": [
     "To get the F-value, we divide the SNSQGMD (`sum_sq`) value by an estimate of the remaining variation.  The remaining variation in this case (type II sum of squares) is what we have left after we've removed everything we can remove with our `gender` and `diet` and `gender:diet` means."
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "396d7252",
+   "id": "a680c76f",
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a95c886",
+   "id": "810f8cbd",
    "metadata": {},
    "source": [
     "Notice this is the `Residual` `sum_sq` value in the table."
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f409960",
+   "id": "711e299b",
    "metadata": {},
    "source": [
     "Finally we calculate the *degrees of freedom* for each test, and for the remaining variation.  We won't go into details about these:"
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2143084",
+   "id": "e1359569",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58503577",
+   "id": "054af8ea",
    "metadata": {},
    "source": [
     "We replicate all three F values in the ANOVA table above:"
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "42ce4ca8",
+   "id": "88fc1534",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "78cb1906",
+   "id": "ed2f8b25",
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3f07c6c9",
+   "id": "c026e0c6",
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1697,8 @@
     }
    ],
    "source": [
-    "# We have already adjusted the interaction values for gender and diet.\n",
+    "# We have already adjusted the interaction values for gender and diet,\n",
+    "# so we subtract the degrees of freedom for those effects.\n",
     "df_inter = n_groups - df_gender - df_diet - 1  # 2\n",
     "F_inter = (inter_ss / df_inter) / (resid_ss / df_error)\n",
     "F_inter"
@@ -1705,7 +1706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3ffb81",
+   "id": "5d66f63b",
    "metadata": {},
    "source": [
     "We can look up the p value in the corresponding F distribution.  For example:"
@@ -1714,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ae486888",
+   "id": "4c2879a1",
    "metadata": {},
    "outputs": [
     {
@@ -1740,13 +1741,7 @@
  "metadata": {
   "jupytext": {
    "notebook_metadata_filter": "all,-language_info",
-   "split_at_heading": true,
-   "text_representation": {
-    "extension": ".Rmd",
-    "format_name": "rmarkdown",
-    "format_version": "1.2",
-    "jupytext_version": "1.8.2"
-   }
+   "split_at_heading": true
   },
   "kernelspec": {
    "display_name": "Python 3",
